# Carsten-Backend

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Rocket.toml  docker-compose-integration.yml  docker-compose-staging.yml  docker-compose.yml  init-letsencrypt.sh  start_server.sh  tmp.html  tmp.txt
certs/: fullchain.pem  key.pem
private/: ca_cert.pem  ca_key.pem  cert.pem  key.pem
src/: error.rs  logging.rs  main.rs  spotify.rs  youtube.rs
src/error/: mod.rs
src/spotify/: mod.rs
src/youtube/: mod.rs
