[package]
name = "chromi_tube_backend"
version = "0.1.0"
authors = ["Aron Metzig <aron.metzig@interface-ag.de>"]
edition = "2018"

[dependencies]
chrono = "0.4.10"
rocket = { version = "0.4.2", features = ["tls"] }
rocket_contrib = "0.4.2" 
rocket-slog = "0.4.0"
reqwest = "0.9.22"
hyper = "0.12"
serde = "1.0"
serde_json = "1.0"
scraper = "0.11.0"
sloggers = "0.3.5"
slog = "2.5.2"
slog-bunyan = "2.2.0"
once_cell = "1.3.1"
