[package]
name = "chromi_tube_backend"
version = "0.1.0"
authors = ["Aron Metzig <aron.metzig@interface-ag.de>"]
edition = "2018"

[dependencies]
actix-rt = "1.1.1"
actix-web = { version = "2.0.0" }
actix-cors = "0.2.0"
chrono = "0.4.11"
env_logger = "0.7"
futures = "0.3"
reqwest = { version = "0.10.8", features = ["json"] }
serde = "1.0" 
serde_json = "1.0"
scraper = "0.12.0"
sloggers = "0.3.5"
slog = "2.5.2"
once_cell = "1.4.0"
