[package]
name = "chromi_tube_backend"
version = "0.1.0"
authors = ["Aron Metzig <aron.metzig@interface-ag.de>"]
edition = "2018"

[dependencies]
actix-rt = "2"
actix-web = { version = "3", features = ["openssl"] }
actix-cors = "0.5"
chrono = "0.4"
env_logger = "0.8"
futures = "0.3"
once_cell = "1.5"
openssl = { version = "0.10", features = ["v110"] }
serde = "1" 
serde_json = "1"
scraper = "0.12"
sloggers = "1"
slog = "2.7"